crates/kb-code-server/src/snapshots/kb_code_server__highlight__tests__css_small_fixture_highlight_spans_snapshot.snap
---
source: crates/kb-code-server/src/highlight.rs
expression: spans
---
[
    Span {
        byte_start: 0,
        byte_len: 12,
        class: Comment,
    },
    Span {
        byte_start: 13,
        byte_len: 1,
        class: Punctuation,
    },
    Span {
        byte_start: 14,
        byte_len: 3,
        class: Property,
    },
    Span {
        byte_start: 18,
        byte_len: 1,
        class: Punctuation,
    },
    Span {
        byte_start: 22,
        byte_len: 8,
        class: Property,
    },
    Span {
        byte_start: 30,
        byte_len: 1,
        class: Punctuation,
    },
    Span {
        byte_start: 32,
        byte_len: 3,
        class: Number,
    },
    Span {
        byte_start: 35,
        byte_len: 1,
        class: Punctuation,
    },
    Span {
        byte_start: 39,
        byte_len: 5,
        class: Property,
    },
    Span {
        byte_start: 44,
        byte_len: 1,
        class: Punctuation,
    },
    Span {
        byte_start: 46,
        byte_len: 1,
        class: Punctuation,
    },
    Span {
        byte_start: 47,
        byte_len: 6,
        class: StringSpecial,
    },
    Span {
        byte_start: 53,
        byte_len: 1,
        class: Punctuation,
    },
    Span {
        byte_start: 55,
        byte_len: 1,
        class: Punctuation,
    },
]
