crates/kb-code-server/src/snapshots/kb_code_server__highlight__tests__rust_snippet_golden_line_spans.snap
---
source: crates/kb-code-server/src/highlight.rs
expression: "wire(Some(\"rust\"), RUST_SNIPPET)"
---
HighlightOut {
    schema: "highlight/1",
    lang: Some(
        "rust",
    ),
    tier: "full",
    spans: [
        LineRoleSpan {
            line: 1,
            start: 0,
            end: 2,
            role: Keyword,
        },
        LineRoleSpan {
            line: 1,
            start: 3,
            end: 6,
            role: Function,
        },
        LineRoleSpan {
            line: 1,
            start: 6,
            end: 7,
            role: Punctuation,
        },
        LineRoleSpan {
            line: 1,
            start: 7,
            end: 8,
            role: Variable,
        },
        LineRoleSpan {
            line: 1,
            start: 8,
            end: 9,
            role: Punctuation,
        },
        LineRoleSpan {
            line: 1,
            start: 10,
            end: 13,
            role: Type,
        },
        LineRoleSpan {
            line: 1,
            start: 13,
            end: 14,
            role: Punctuation,
        },
        LineRoleSpan {
            line: 1,
            start: 15,
            end: 16,
            role: Variable,
        },
        LineRoleSpan {
            line: 1,
            start: 16,
            end: 17,
            role: Punctuation,
        },
        LineRoleSpan {
            line: 1,
            start: 18,
            end: 21,
            role: Type,
        },
        LineRoleSpan {
            line: 1,
            start: 21,
            end: 22,
            role: Punctuation,
        },
        LineRoleSpan {
            line: 1,
            start: 26,
            end: 29,
            role: Type,
        },
        LineRoleSpan {
            line: 1,
            start: 30,
            end: 31,
            role: Punctuation,
        },
        LineRoleSpan {
            line: 2,
            start: 4,
            end: 10,
            role: Comment,
        },
        LineRoleSpan {
            line: 4,
            start: 0,
            end: 1,
            role: Punctuation,
        },
    ],
    honesty: HighlightHonesty {
        tier: "full",
        engine: "tree-sitter:tree-sitter-rust",
        derived_from: "highlights",
        reason: None,
    },
    salt: None,
}
